# maxminddb.py

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: json_lookup.py  lookup.py  only_lookup.py  only_scan.py  query_lookup.py  query_scan.py  scan.py  threads_lookup.py
src/: lib.zig
tests/: test_reader.py
