[project]
name = "maxminddb-zig"
version = "0.1.0"
description = "A Zig-backed Python module to read MaxMind DB files"
requires-python = ">=3.10"
readme = "README.md"
license = "ISC"
authors = [{name = "Marsel Mavletkulov"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
]
keywords = ["maxmind", "geoip", "geolocation", "ip-address", "mmdb"]

[project.urls]
Repository = "https://github.com/marselester/maxminddb.py"

[tool.pyoz]
module-path = "src/lib.zig"
module-name = "maxminddb_zig"
optimize = "ReleaseFast"
